App: Init table  (#4)
* Call server for table data

* Search data in table

---------
