# openapi.yml
@@ -23,7 +23,7 @@ tags:
   - name: ahb
     description: Everything about AHB documents
 paths:
-  /ahb/{format-version}/{pruefi}:
+  /api/ahb/{format-version}/{pruefi}:
     get:
       tags:
         - ahb
@@ -53,7 +53,7 @@ paths:
       security:
         - ahbesser_auth:
             - read:ahb
-  /format-versions:
+  /api/format-versions:
     get:
       tags:
         - ahb
@@ -69,7 +69,7 @@ paths:
                 items:
                   type: string
                 example: [FV2310, FV2404, FV2410]
-  /{format-version}/pruefis:
+  /api/{format-version}/pruefis:
     get:
       tags:
         - ahb
